Opened 2 years ago
Closed 9 months ago
#17900 closed bug (fixed)
[HaikuDepot] count view in All packages tab does not scale
Reported by: | diver | Owned by: | apl-haiku |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta5 |
Component: | Applications/HaikuDepot | Version: | R1/Development |
Keywords: | hidpi | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev56400 x86_64.
Change History (1)
comment:1 by , 9 months ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fix merged in hrev57763.