src/kits/interface/ColumnListView.cpp
@@ -2155,8 +2155,10 @@ BColumnListView::DoLayout()
 
 	if (fStatusView != NULL) {
 		BSize size = fStatusView->MinSize();
-		if (size.height > B_H_SCROLL_BAR_HEIGHT)
-			size.height = B_H_SCROLL_BAR_HEIGHT;
+		float hScrollBarHeight = fHorizontalScrollBar->Frame().Height();
+
+		if (size.height > hScrollBarHeight)
+			size.height = hScrollBarHeight;
 		if (size.width > Bounds().Width() / 2)
 			size.width = floorf(Bounds().Width() / 2);
 
